<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blankboard"
    tools:context=".MainMenu">

    <TextView
        android:id="@+id/textView16"
        android:layout_width="304dp"
        android:layout_height="52dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/tic_tac_toe"
        android:textColor="#000000"
        android:textSize="40sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="303dp"
        android:layout_height="179dp"
        android:layout_marginTop="102dp"
        app:layout_constraintBottom_toTopOf="@id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        app:srcCompat="@drawable/vertscoreboard"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="133dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:srcCompat="@drawable/gameboard"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/view"
        android:layout_width="266dp"
        android:layout_height="350dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/woodmenu"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/onePlayer"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:background="#0F000000"
        android:text="@string/_1_player"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/twoPlayers" />

    <Button
        android:id="@+id/rules"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:background="#0F000000"
        android:text="@string/rules"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/onePlayer" />

    <Button
        android:id="@+id/twoPlayers"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:background="#0F000000"
        android:text="@string/_2_player"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/onePlayer"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

</androidx.constraintlayout.widget.ConstraintLayout>