<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TwoPlayer"
    android:background="@drawable/blankboard">

    <Button
        android:id="@+id/btnC3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="18dp"
        android:background="#00000000"
        android:textColor="#FFFFFF"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/btnC2"
        app:layout_constraintTop_toBottomOf="@+id/btnB3"
        tools:text="X" />

    <Button
        android:id="@+id/btnA3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:background="#00000000"
        android:textColor="#FFFFFF"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/btnA2"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        tools:text="X" />

    <Button
        android:id="@+id/btnB3"
        android:layout_width="80dp"
        android:layout_height="85dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:background="#00000000"
        android:textColor="#FFFFFF"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/btnB2"
        app:layout_constraintTop_toBottomOf="@+id/btnA3"
        tools:text="X" />

    <Button
        android:id="@+id/btnB2"
        android:layout_width="80dp"
        android:layout_height="85dp"
        android:layout_marginTop="25dp"
        android:background="#00000000"
        android:textColor="#FFFFFF"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnA2"
        tools:text="X" />

    <Button
        android:id="@+id/btnB1"
        android:layout_width="90dp"
        android:layout_height="85dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="#00000000"
        android:textColor="#FFFFFF"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btnB2"
        app:layout_constraintTop_toBottomOf="@+id/btnA1"
        tools:text="X" />

    <Button
        android:id="@+id/btnC1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="#00000000"
        android:textColor="#FFFFFF"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btnC2"
        app:layout_constraintTop_toBottomOf="@id/btnB1"
        tools:text="X" />

    <Button
        android:id="@+id/btnC2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="18dp"
        android:background="#00000000"
        android:textColor="#FFFFFF"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnB2"
        tools:text="X" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="304dp"
        android:layout_height="52dp"
        android:layout_marginTop="4dp"
        android:text="@string/tic_tac_toe"
        android:textColor="#000000"
        android:textSize="40sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/reset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/player_x"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView23"
        app:layout_constraintEnd_toEndOf="@+id/textView23" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/player_o"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView21"
        app:layout_constraintEnd_toEndOf="@+id/textView21" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="15dp"
        android:text="@string/ties"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="226dp"
        android:layout_height="121dp"
        android:layout_marginTop="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset"
        app:srcCompat="@drawable/vertscoreboard"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:srcCompat="@drawable/gameboard"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/playerXWins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="5dp"
        android:text="0"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/countTies"
        app:layout_constraintStart_toEndOf="@+id/textView21"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/playerOWins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="5dp"
        android:text="0"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/playerXWins"
        app:layout_constraintStart_toEndOf="@+id/textView22"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/countTies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="15dp"
        android:text="0"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintStart_toEndOf="@+id/textView23"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/menu"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="-4dp"
        android:background="#72000000"
        android:text="@string/menu"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <Button
        android:id="@+id/reset"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="-4dp"
        android:background="#72000000"
        android:text="@string/reset"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/menu"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <Button
        android:id="@+id/btnA1"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="#00000000"
        android:textColor="#FFFFFF"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btnA2"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        tools:text="X" />

    <Button
        android:id="@+id/btnA2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:background="#00000000"
        android:textColor="#FFFFFF"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        tools:text="X" />

</androidx.constraintlayout.widget.ConstraintLayout>